--- a/components/example-source/example-source.less
+++ b/components/example-source/example-source.less
@@ -4,6 +4,7 @@
 //
 // Styleguide components.example.source
 .ex-source {
-  float: right; // fallback for inline-end
-  float: inline-end;
+  float       : right;       // fallback for inline-end
+  float       : inline-end;
+  margin-block: 0em;
 }
