--- a/components/abbreviation/abbreviation.less
+++ b/components/abbreviation/abbreviation.less
@@ -6,7 +6,15 @@
 //
 // Styleguide components.abbreviation
 .abbr, .abbreviation {
-  cursor:                  help;
-  text-decoration:         dotted underline;
-  text-underline-position: under;
+
+  &[title] {
+    cursor:                  help;
+    text-decoration:         dotted underline;
+    text-underline-position: under;
+  }
+
+  &:not([title]) {
+    text-decoration: none;
+  }
+
 }
