FIX: Only add left padding to ex-source

--- a/components/example-source/example-source.less
+++ b/components/example-source/example-source.less
@@ -4,8 +4,8 @@
 //
 // Styleguide components.example.source
 .ex-source {
-  float         : right;       // fallback for inline-end
-  float         : inline-end;
-  margin-block  : 0em;
-  padding-inline: 0.25em;
+  float               : right;       // fallback for inline-end
+  float               : inline-end;
+  margin-block        : 0em;
+  padding-inline-start: 0.25em;
 }
