--- a/components/interlinear/interlinear.less
+++ b/components/interlinear/interlinear.less
@@ -254,7 +254,7 @@
     padding: 0em;
   }
 
-  .tln, .translation {
+  .lit, .literal, .tln, .translation {
     .tln;
     margin:  0em;
     padding: 0em;
