NEW: Underline emphasis

--- a/components/emphasis/emphasis.less
+++ b/components/emphasis/emphasis.less
@@ -9,3 +9,11 @@
   color:       var(--em-color);
   font-weight: bold;
 }
+
+.strong {
+  font-weight: bold;
+}
+
+.u, .underline {
+  text-decoration: underline;
+}
