--- a/components/inline-example/inline-example.less
+++ b/components/inline-example/inline-example.less
@@ -9,12 +9,8 @@
 //
 // Styleguide components.inline
 .inex, .inline-ex {
-
   .txn;
-  font-style: italic;
-
-  b, em, .em, .emphasis, strong {
-    .em;
-  }
-
+  cursor     : copy;
+  font-style : italic;
+  user-select: all;
 }
