--- a/components/interlinear/interlinear.less
+++ b/components/interlinear/interlinear.less
@@ -202,7 +202,8 @@
   //
   // Styleguide components.interlinear.emphasis
   b, em, .em, .emphasis, strong {
-    .em;
+    color      : var(--em-color);
+    font-weight: bold;
   }
 
   // Example Header
@@ -271,7 +272,7 @@
   }
 
   u, .u, .underline {
-    .u;
+    text-decoration: underline;
   }
 
   .words {
