FIX: Emphasis in examples is improperly italicized

--- a/components/example/example.less
+++ b/components/example/example.less
@@ -12,7 +12,8 @@
   line-height: 1.5;
 
   b, em, .em, .emphasis, strong {
-    .em;
+    color      : var(--em-color);
+    font-weight: bold;
   }
 
   .ex-source {
