--- a/components/document/document.less
+++ b/components/document/document.less
@@ -7,8 +7,14 @@
 // Styleguide components.document
 .ling-document {
 
-  counter-reset: examples figures sections;
+  counter-reset: examples figures sections tables;
   font-family:   var(--font-unicode-serif);
+
+  caption::before {
+    content          : 'Table ' counter(tables) ':';
+    font-weight      : bold;
+    margin-inline-end: var(--counter-margin);
+  }
 
   figcaption::before {
     content          : 'Figure ' counter(figures) ':';
