deploy: 9be97bd8089146f7ac14852f0b0eca6c82e2c5b9

--- a/dlx.css
+++ b/dlx.css
@@ -85,6 +85,9 @@ This file bundles all the DLx styles into a single file.
 .ling-document .subsubsection {
   counter-reset: paragraphs;
 }
+.ling-document .table {
+  counter-increment: tables;
+}
 .attn,
 .attention {
   font-weight: bold;
