DOCS: Add CSS pipeline for docs site

--- a/docs/layouts/main/main.html
+++ b/docs/layouts/main/main.html
@@ -11,6 +11,7 @@
     <meta name=robots content='index,follow'>
     <link rel=author href=https://danielhieber.info>
     <link rel=license href=https://github.com/digitallinguistics/styles/blob/main/LICENSE>
+    <style>{{ css }}</style>
   </head>
 
   <body>{{ content }}</body>
