--- a/docs/layouts/main/main.css
+++ b/docs/layouts/main/main.css
@@ -1,3 +1,23 @@
+@import 'styles/colors.css';
 @import 'styles/fonts.css';
 @import 'styles/typography.css';
 @import 'styles/reset.css';
+
+html {
+
+  font-family:               var(--font);
+  font-size:                 100%;
+  line-height:               1.5;
+  scroll-behavior:           smooth;
+  text-decoration-thickness: from-font;
+
+  @media (prefers-color-scheme: dark) {
+    background-color: var(--off-black);
+    color:            var(--off-white);
+  }
+
+  @media (prefers-reduced-motion: reduce) {
+    scroll-behavior: auto;
+  }
+
+}
