--- a/docs/layouts/main/main.html
+++ b/docs/layouts/main/main.html
@@ -14,6 +14,8 @@
     <style>{{ css }}</style>
   </head>
 
-  <body>{{ content }}</body>
+  <body>
+    <main>{{ content }}</main>
+  </body>
 
 </html>
