--- a/docs/layouts/main/main.html
+++ b/docs/layouts/main/main.html
@@ -5,17 +5,20 @@
     <meta charset=utf-8>
     <meta name=viewport content='width=device-width, initial-scale=1, shrink-to-fit=no'>
     <title>DLx | Styles</title>
-    <meta name=author content='Daniel W. Hieber'>
-    <meta name=description content='The DLx styles library for styling linguistic data on the web'>
+    <meta name=author content='{{ pkg.author.name }}'>
+    <meta name=description content='{{ pkg.description }}'>
     <meta name=rating content=general>
     <meta name=robots content='index,follow'>
-    <link rel=author href=https://danielhieber.info>
+    <link rel=author href={{ pkg.author.url }}>
     <link rel=license href=https://github.com/digitallinguistics/styles/blob/main/LICENSE>
     <style>{{ css }}</style>
   </head>
 
   <body>
+    {% include './components/Nav/Nav.html' %}
     <main>{{ content }}</main>
+    <script async type=module>{{ js }}</script>
+    {{ svg }}
   </body>
 
 </html>
