DOCS: Finish custom documentation (#241)
closes #241

--- a/components/inline-example/inline-example.html
+++ b/components/inline-example/inline-example.html
@@ -1,1 +1,1 @@
-<p>The Chitimacha word <i class=inex lang=ctm>kix qatin</i> <q class=tln>horse</q> literally means <q class=tln>big dog</q>.</p>
+<p>The irrealis marker is <i>&#8209;cu(y)&#8209;</i> when the verb is singular and <i>&#8209;di&#8209;</i> when the verb is plural.</p>
