--- a/docs/layouts/main/styles/fonts.css
+++ b/docs/layouts/main/styles/fonts.css
@@ -98,6 +98,7 @@
     url('/fonts/Libertinus/LibertinusSerif-Regular.woff2') format('woff2');
   font-style:  normal;
   font-weight: 400;
+  size-adjust: 120%;
 }
 
 @font-face {
@@ -106,6 +107,7 @@
     url('/fonts/Libertinus/LibertinusSerif-Italic.woff2') format('woff2');
   font-style:  italic;
   font-weight: 400;
+  size-adjust: 120%;
 }
 
 @font-face {
@@ -114,6 +116,7 @@
     url('/fonts/Libertinus/LibertinusSerif-Semibold.woff2') format('woff2');
   font-style:  normal;
   font-weight: 600;
+  size-adjust: 120%;
 }
 
 @font-face {
@@ -122,6 +125,7 @@
     url('/fonts/Libertinus/LibertinusSerif-SemiboldItalic.woff2') format('woff2');
   font-style:  italic;
   font-weight: 600;
+  size-adjust: 120%;
 }
 
 @font-face {
@@ -130,6 +134,7 @@
     url('/fonts/Libertinus/LibertinusSerif-Bold.woff2') format('woff2');
   font-style:  normal;
   font-weight: 700;
+  size-adjust: 120%;
 }
 
 @font-face {
@@ -138,4 +143,5 @@
     url('/fonts/Libertinus/LibertinusSerif-BoldItalic.woff2') format('woff2');
   font-style:  italic;
   font-weight: 700;
+  size-adjust: 120%;
 }
