--- a/components/abbreviation/abbreviation.html
+++ b/components/abbreviation/abbreviation.html
@@ -1,1 +1,1 @@
-<p><dfn class=dfn>Digital Linguistics</dfn> (<abbr class=abbr title='Digital Linguistics'>DLx</abbr>) is the science of digital data management for linguistics, including the digital storage, representation, manipulation, and dissemination of linguistic data.</p>
+<p>An earlier version of this paper was presented at the 2014 Winter Meeting of the Society for the Study of the Indigenous Languages of the Americas (<abbr title='Society for the Study of the Indigenous Languages of the Americas'>SSILA</abbr>).</p>
