--- a/dlx.less
+++ b/dlx.less
@@ -2,8 +2,10 @@
 @import 'typography/typography.css';
 
 /* Components */
+@import (less, reference) 'components/abbreviation/abbreviation.css';
 @import (less, reference) 'components/inline-example/inline-example.css';
 
 .ling-doc {
-  i { .inex; }
+  abbr { .abbr; }
+  i    { .inex; }
 }
