Use `.ling-doc` class in documentation

--- a/components/document/document.less
+++ b/components/document/document.less
@@ -5,7 +5,7 @@
 // Markup: document.html
 //
 // Styleguide components.document
-.ling-document {
+.ling-doc {
 
   counter-reset: examples figures sections tables;
   font-family:   var(--font-unicode-serif);
