--- a/dlx.less
+++ b/dlx.less
@@ -3,9 +3,11 @@
 
 /* Components */
 @import (less, reference) 'components/abbreviation/abbreviation.css';
+@import (less, reference) 'components/cite/cite.css';
 @import (less, reference) 'components/inline-example/inline-example.css';
 
 .ling-doc {
   abbr { .abbr; }
+  cite { .cite; }
   i    { .inex; }
 }
