Update example for `<cite>` component

--- a/components/cite/cite.html
+++ b/components/cite/cite.html
@@ -1,1 +1,1 @@
-<p>In his review of <cite class=cite>Endangered languages and new technologies</cite>, Hieber (2015) mentions certain concepts in Digital Linguistics.</p>
+<p><cite>The World Atlas of Language Structures Online</cite> (Dryer & Haspelmath 2013), for instance, has separate sections on alignment in verbs, nouns, and pronouns because so many languages have distinct alignment systems in different parts of their grammars.</p>
