--- a/components/definition/definition.html
+++ b/components/definition/definition.html
@@ -1,1 +1,1 @@
-<p><dfn class=dfn>Digital Linguistics</dfn> (<abbr class=abbr title='Digital Linguistics'>DLx</abbr>) is the science of digital data management for linguistics, including the digital storage, representation, manipulation, and dissemination of linguistic data.</p>
+<p>The <dfn>phonology</dfn> (sound system) of Chitimacha is unusual among both Southeastern languages and languages globally.</p>
