--- a/dlx.less
+++ b/dlx.less
@@ -4,10 +4,12 @@
 /* Components */
 @import (less, reference) 'components/abbreviation/abbreviation.css';
 @import (less, reference) 'components/cite/cite.css';
+@import (less, reference) 'components/definition/definition.css';
 @import (less, reference) 'components/inline-example/inline-example.css';
 
 .ling-doc {
   abbr { .abbr; }
   cite { .cite; }
+  dfn  { .dfn; }
   i    { .inex; }
 }
