--- a/components/document/document.html
+++ b/components/document/document.html
@@ -1,100 +1,52 @@
+<style>
+.ling-doc {
+  .author {
+    display: block;
+  }
+  & header {
+    text-align: center;
+  }
+  h1 {
+    font-size: xxx-large;
+  }
+  h2 {
+    font-size: xx-large;
+  }
+  h3 {
+    font-size: x-large;
+  }
+  h4 {
+    font-size: large;
+  }
+  h5 {
+    font-size: medium;
+  }
+  h6 {
+    font-size: small;
+  }
+}
+</style>
+
 <article class=ling-doc>
-
-  <header style="text-align: center;">
-
-    <h1 style="font-size: 2em;">Digital Linguistics: An introduction</h1>
-
-    <div>
+  <header>
+    <h1>Semantic alignment in Chitimacha</h1>
+    <div class=author>
       <p>Daniel W. Hieber</p>
       <p>University of California, Santa Barbara</p>
     </div>
-
   </header>
-
-  <section>
-
-    <h2>Introduction</h2>
-
-    <p>This paper introduces the field of <dfn>Digital Linguistics</dfn> (<abbr title='Digital Linguistics'>DLx</abbr>). The Navajo word <i class=txn lang=nav>łééchąąʼí</i> <q>dog</q> is an example of a <dfn>retronym</dfn>.</p>
-
-    <ol class=examples>
-
-      <li class=ex>
-
-        <p class=ex-header>Plains Cree (Algonquian)</p>
-
-        <table>
-          <tr>
-            <td class=txn lang=crk>asam</td>
-            <td class=tln>feed him/her/it</td>
-          </tr>
-          <tr>
-            <td class=txn lang=crk>asām</td>
-            <td class=tln>a snowshoe</td>
-          </tr>
-          <tr>
-            <td class=txn lang=crk>askihk</td>
-            <td class=tln>a pail</td>
-          </tr>
-          <tr>
-            <td class=txn lang=crk>askīhk</td>
-            <td class=tln>on the land/earth</td>
-          </tr>
-        </table>
-
-        <p class=ex-source>Okimāsis. 2018. <cite>Cree: Language of the Plains / nehiyawewin: paskwāwi-pīkiskwēwin</cite></p>
-
-      </li>
-
-      <li class='ex igl'>
-
-        <p class=ex-header>Chitimacha (isolate)</p>
-
-        <p class=txn lang=ctm>siksi<em>nk</em> his heːčtiʔi</p>
-
-        <ol class=words>
-
-          <li class=word>
-            <span class=w-m lang=ctm>siksi‑<em>nk</em></span>
-            <span class=w-gl>eagle‑<abbr title=unknown>??</abbr></span>
-          </li>
-
-          <li class=word>
-            <span class=w-m lang=ctm>his</span>
-            <span class=w-gl><abbr title=responsive>resp</abbr></span>
-          </li>
-
-          <li class=word>
-            <span class=w-m lang=ctm>heːčt‑iʔi</span>
-            <span class=w-gl>call‑<abbr title=non-first>nf</abbr>;<abbr title=singular>sg</abbr></span>
-          </li>
-
-        </ol>
-
-        <p class=tln>an eagle met him</p>
-
-        <p class=ex-source>Swadesh 1939b: A1b.1</p>
-
-      </li>
-
-      <li class=ex>
-        <p class=ex-header>Menominee (Algonquian)</p>
-        <ol class=subexamples>
-          <li><p><i class=txn lang=mez>pāpaehcen</i> <q class=tln>he, she, it (anim.) falls</q> (AI)</p></li>
-          <li><p><i class=txn lang=mez>pāpaehnaen</i> <q clas=translation>it (inan.) falls</q> (II)</p></li>
-        </ol>
-      </li>
-
-      <li class=ex>
-        <p class=ex-header>Menominee (Algonquian)</p>
-        <ol class=subexamples>
-          <li><p><i class=txn lang=mez>na͞ewa͞ew</i> <q class=tln>s/he sees him, her, it (anim.)</q> (TA)</p></li>
-          <li><p><i class=txn lang=mez>na͞emwah</i> <q class=tln>s/he sees it (inan.)</q> (TI)</p></li>
-        </ol>
-      </li>
-
-    </ol>
-
-  </section>
-
+  <!-- TODO -->
+  <!--
+    - numbered examples (non-interlinear)
+    - numbered figures
+    - numbered sections
+    - numbered tables
+    - table captions
+    - figure captions
+    - paragraph spacing
+    - abbreviation (partial)
+    - cite (partial)
+    - definition (partial)
+    - inline example (partial)
+  -->
 </article>
