--- a/dlx.less
+++ b/dlx.less
@@ -5,9 +5,11 @@
 @import (less, reference) 'components/abbreviation/abbreviation.css';
 @import (less, reference) 'components/cite/cite.css';
 @import (less, reference) 'components/definition/definition.css';
+@import (less, reference) 'components/document/document.css';
 @import (less, reference) 'components/inline-example/inline-example.css';
 
 .ling-doc {
+  .ling-doc;
   abbr { .abbr; }
   cite { .cite; }
   dfn  { .dfn; }
