--- a/docs/layouts/main/main.html
+++ b/docs/layouts/main/main.html
@@ -16,7 +16,7 @@
 
   <body>
     {% include './components/Nav/Nav.html' %}
-    <main class=ling-doc>{{ content }}</main>
+    <main>{{ content }}</main>
     <script async type=module>{{ js }}</script>
     {{ svg }}
   </body>
